tests/a/tests/integrity/fail/if/if.3.stderr
error: expected {root}{root}, found {root}{b,c,root}
  --> tests/integrity/fail/if/if.3.rs:11:13
   |
11 |         x = 6;
   |             ^
